Clean up some code